header section fixed

--- a/fun_labs/key_features_functionalities.html
+++ b/fun_labs/key_features_functionalities.html
@@ -105,8 +105,7 @@
             <!-- Main Content Area -->
             <main class="lesson-main-content">
                 <div class="main-content-header">
-                    <i class="fas fa-cogs lesson-icon"></i>
-                    <h1>Key Features and Functionalities</h1>                    
+                    <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
 
                 <div class="main-content-section">
