--- a/fun_labs/congratulations.html
+++ b/fun_labs/congratulations.html
@@ -112,8 +112,7 @@
             <!-- Main Content Area -->
             <main class="lesson-main-content">
                 <div class="main-content-header">
-                    <i class="fas fa-trophy lesson-icon"></i>
-                    <h1>Congratulations!</h1>                    
+                    <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
 
                 <div class="main-content-section">
