--- a/marketing_earning/affiliate_congratulations.html
+++ b/marketing_earning/affiliate_congratulations.html
@@ -45,7 +45,15 @@
                             <span class="badge badge-intermediate">Intermediate</span>
                         </div>
                     </div>
-                    <button class="sidebar-lesson-start-btn" onclick="window.location.href='affiliate_intro.html'">Start</button>
+                    <div class="sidebar-progress-container" style="margin: 16px 0 8px 0;">
+                        <div style="display: flex; align-items: center; justify-content: space-between; font-size: 12px; color: #666; margin-bottom: 4px;">
+                            <span>0% Complete</span>
+                            <span>0 of 9 Lessons</span>
+                        </div>
+                        <div style="background: #eee; border-radius: 6px; height: 8px; width: 100%; overflow: hidden;">
+                            <div style="background: var(--primary-color); width: 0%; height: 100%; transition: width 0.3s;"></div>
+                        </div>
+                    </div>
                 </div>
                 <ul class="lesson-list">
                     <li class="lesson-list-item"><a href="affiliate_intro.html"><span class="lesson-title">Introduction</span></a></li>
@@ -162,5 +170,24 @@
         </div>
         <p class="enink-learning">Power by ENINK Learning</p>
     </footer>
+    <script>
+        // Sidebar submenu expand/collapse logic for all submenus
+        const submenuToggles = document.querySelectorAll('.submenu-toggle');
+        submenuToggles.forEach(toggle => {
+            toggle.addEventListener('click', function(e) {
+                e.preventDefault();
+                const parent = this.parentElement;
+                parent.classList.toggle('expanded');
+                const submenu = parent.querySelector('.submenu');
+                if (submenu) {
+                    if (parent.classList.contains('expanded')) {
+                        submenu.style.maxHeight = '200px';
+                    } else {
+                        submenu.style.maxHeight = null;
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 </html> 
