fix navigations for marteting pages

--- a/marketing_earning/affiliate_reporting_issues.html
+++ b/marketing_earning/affiliate_reporting_issues.html
@@ -89,8 +89,7 @@
                 </ul>
             </aside>
             <main class="lesson-main-content">
-                <div class="main-content-header">
-                    <i class="fas fa-book lesson-icon"></i>
+                <div class="main-content-header">                   
                     <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
                 <div class="main-content-section">
@@ -118,10 +117,10 @@
                             <div class="accordion-content" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease;">
                                 <div style="padding: 12px; background-color: white; border-top: 1px solid #e0e0e0;">
                                     <ul style="list-style-type: none; padding-left: 20px; margin: 0;">
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> In-App Reporting – Click the "Report an Issue" button in the Help Center or user dashboard.</li>
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Support Ticket Submission – Fill out a detailed support form describing the problem.</li>
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Live Chat Support – Get real-time assistance from our customer support team.</li>
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Email Support – Send inquiries to support@archivehubs.com.</li>
+                                        <li style="margin-bottom: 8px;"> In-App Reporting – Click the "Report an Issue" button in the Help Center or user dashboard.</li>
+                                        <li style="margin-bottom: 8px;"> Support Ticket Submission – Fill out a detailed support form describing the problem.</li>
+                                        <li style="margin-bottom: 8px;"> Live Chat Support – Get real-time assistance from our customer support team.</li>
+                                        <li style="margin-bottom: 8px;"> Email Support – Send inquiries to support@archivehubs.com.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -136,9 +135,9 @@
                             <div class="accordion-content" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease;">
                                 <div style="padding: 12px; background-color: white; border-top: 1px solid #e0e0e0;">
                                     <ul style="list-style-type: none; padding-left: 20px; margin: 0;">
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> FAQs & Help Center – Search for quick solutions to common issues.</li>
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Community Forums – Engage with other users for troubleshooting tips and best practices.</li>
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Technical Support – Request help for account issues, file recovery, transactions, or security concerns.</li>
+                                        <li style="margin-bottom: 8px;"> FAQs & Help Center – Search for quick solutions to common issues.</li>
+                                        <li style="margin-bottom: 8px;"> Community Forums – Engage with other users for troubleshooting tips and best practices.</li>
+                                        <li style="margin-bottom: 8px;"> Technical Support – Request help for account issues, file recovery, transactions, or security concerns.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -153,8 +152,8 @@
                             <div class="accordion-content" style="max-height: 0; overflow: hidden; transition: max-height 0.3s ease;">
                                 <div style="padding: 12px; background-color: white; border-top: 1px solid #e0e0e0;">
                                     <ul style="list-style-type: none; padding-left: 20px; margin: 0;">
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Standard response time: 24-48 hours for general inquiries.</li>
-                                        <li style="margin-bottom: 8px;"><i class="fas fa-circle" style="font-size: 6px; vertical-align: middle; margin-right: 8px;"></i> Urgent issues (e.g., security breaches, payment disputes) receive priority support.</li>
+                                        <li style="margin-bottom: 8px;"> Standard response time: 24-48 hours for general inquiries.</li>
+                                        <li style="margin-bottom: 8px;"> Urgent issues (e.g., security breaches, payment disputes) receive priority support.</li>
                                     </ul>
                                 </div>
                             </div>
