--- a/marketing_earning/affiliate_congratulations.html
+++ b/marketing_earning/affiliate_congratulations.html
@@ -45,15 +45,7 @@
                             <span class="badge badge-intermediate">Intermediate</span>
                         </div>
                     </div>
-                    <div class="sidebar-progress-container" style="margin: 16px 0 8px 0;">
-                        <div style="display: flex; align-items: center; justify-content: space-between; font-size: 12px; color: #666; margin-bottom: 4px;">
-                            <span>0% Complete</span>
-                            <span>0 of 9 Lessons</span>
-                        </div>
-                        <div style="background: #eee; border-radius: 6px; height: 8px; width: 100%; overflow: hidden;">
-                            <div style="background: var(--primary-color); width: 0%; height: 100%; transition: width 0.3s;"></div>
-                        </div>
-                    </div>
+                    <button class="sidebar-lesson-start-btn" onclick="window.location.href='affiliate_intro.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
                     <li class="lesson-list-item"><a href="affiliate_intro.html"><span class="lesson-title">Introduction</span></a></li>
