--- a/content_portfolio/portfolio_quiz_question_1.html
+++ b/content_portfolio/portfolio_quiz_question_1.html
@@ -45,6 +45,14 @@
                             <span class="badge badge-intermediate">Intermediate</span>
                         </div>
                     </div>
+
+                    <!-- Progress Bar -->
+                    <div class="lesson-progress-bar" style="margin: 18px 0 6px 0;">
+                        <div style="background: #eee; border-radius: 8px; height: 10px; width: 100%;">
+                            <div style="background: #4267B2; width: 17%; height: 10px; border-radius: 8px;"></div>
+                        </div>
+                        <div style="font-size: 13px; color: #333; margin-top: 4px; text-align: left;">17% Complete 2 of 12 Lessons</div>
+                    </div>
                     <button class="sidebar-lesson-start-btn" onclick="window.location.href='content_portfolio_assessment.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
