fixed progress bar

--- a/marketing_earning/affiliate_congratulations.html
+++ b/marketing_earning/affiliate_congratulations.html
@@ -45,6 +45,13 @@
                             <span class="badge badge-intermediate">Intermediate</span>
                         </div>
                     </div>
+                    <!-- Progress Bar -->
+                    <div class="lesson-progress-bar" style="margin: 18px 0 6px 0;">
+                        <div style="background: #eee; border-radius: 8px; height: 10px; width: 100%;">
+                            <div style="background: #4267B2; width: 100%; height: 10px; border-radius: 8px;"></div>
+                        </div>
+                        <div style="font-size: 13px; color: #333; margin-top: 4px; text-align: left;">100% Complete 12 of 12 Lessons</div>
+                    </div>
                     <button class="sidebar-lesson-start-btn" onclick="window.location.href='affiliate_intro.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
@@ -93,21 +100,7 @@
            <main class="lesson-main-content">
             <div class="main-content-header">
                 <i class="fas fa-trophy lesson-icon"></i>
-                <h1>Congratulations!</h1>
-                <div class="lesson-info-badges">
-                    <div class="info-item">
-                        <i class="far fa-clock info-icon"></i>
-                        <span>45-60 minutes</span>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-star info-icon" style="color: #f59e0b;"></i>
-                        <span class="badge badge-fundamentals">Fundamentals</span>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-chart-bar info-icon" style="color: #10b981;"></i>
-                        <span class="badge badge-basic">Basic</span>
-                    </div>
-                </div>
+                <h1>Congratulations!</h1>                
             </div>
 
                 <div class="main-content-section">
