--- a/marketing_earning/collaboration_knowledge_check.html
+++ b/marketing_earning/collaboration_knowledge_check.html
@@ -44,6 +44,14 @@
                             <span class="badge badge-intermediate">Intermediate</span>
                         </div>
                     </div>
+
+                    <!-- Progress Bar -->
+                    <div class="lesson-progress-bar" style="margin: 18px 0 6px 0;">
+                        <div style="background: #eee; border-radius: 8px; height: 10px; width: 100%;">
+                            <div style="background: #4267B2; width: 17%; height: 10px; border-radius: 8px;"></div>
+                        </div>
+                        <div style="font-size: 13px; color: #333; margin-top: 4px; text-align: left;">17% Complete 2 of 12 Lessons</div>
+                    </div>
                     <button class="sidebar-lesson-start-btn" onclick="window.location.href='content_portfolio_assessment.html'">Start</button>
                 </div>
                 <ul class="lesson-list">
@@ -89,8 +97,7 @@
                 </ul>
             </aside>
             <main class="lesson-main-content">
-                <div class="main-content-header">
-                    <i class="fas fa-clipboard-list lesson-icon"></i>
+                <div class="main-content-header">                   
                     <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
                 <div class="assessment-cover-content">
