--- a/portfolio_views/private_corporate_portfolio.html
+++ b/portfolio_views/private_corporate_portfolio.html
@@ -15,7 +15,7 @@
             <!-- Profile Header Section -->
             <div class="card profile-header">
                 <div class="profile-banner">
-                    <img id="bannerImage" src="images/coverphoto.jpg" alt="Profile Banner">
+                    <img id="bannerImage" src="images/post-example.jpg" alt="Profile Banner">
                     
                     <div class="banner-upload-icon" onclick="document.getElementById('bannerUpload').click();">
                         <i class="fas fa-camera"></i>
